// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly on Android 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <statusBar
    animated={true}
    backgroundColor="transparent"
    translucent={true}
  />
  <View
    style={
      Array [
        Object {
          "height": 10,
        },
        Object {
          "backgroundColor": "#2d2f7f",
        },
      ]
    }
  />
  <Component
    navigation={
      Object {
        "addListener": [MockFunction] {
          "calls": Array [
            Array [
              "didFocus",
              [Function],
            ],
          ],
        },
      }
    }
  />
</View>
`;

exports[`renders correctly on Android with translucent status bar 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <statusBar
    animated={true}
    backgroundColor="transparent"
    translucent={true}
  />
  <Component
    navigation={
      Object {
        "addListener": [MockFunction] {
          "calls": Array [
            Array [
              "didFocus",
              [Function],
            ],
          ],
        },
      }
    }
  />
</View>
`;

exports[`renders correctly on iOS 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <statusBar
    animated={true}
    backgroundColor="transparent"
    translucent={true}
  />
  <Component
    navigation={
      Object {
        "addListener": [MockFunction] {
          "calls": Array [
            Array [
              "didFocus",
              [Function],
            ],
          ],
        },
      }
    }
  />
</View>
`;
